Add bonus to social and order evaluation responses and add table columns
